# orthanc-saola-storage

./: .gitignore  CMakeLists.txt
Resources/: RunCppCheck.sh  SyncOrthancFolder.py  holy-build-box-compile.sh  holy-build-box-internal.sh
Resources/CMake/: JavaScriptLibraries.cmake
Resources/Graveyard/: MinorityReport.cpp
Resources/Orthanc/CMake/: DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Sdk-1.12.5/orthanc/: OrthancCPlugin.h
Resources/Samples/JavaScript/: qido-rs.js  stow-rs.js
Resources/Samples/Proxy/: NOTES.txt  nginx.local.conf
Resources/Samples/Python/: SendStow.py  WadoRetrieveStudy.py
Sources/: DeletionWorker.cpp  DeletionWorker.h  PendingDeletionsDatabase.cpp  PendingDeletionsDatabase.h  Plugin.cpp  SaolaConfiguration.cpp  SaolaConfiguration.h  StorageArea.cpp  StorageArea.h
